--- a/CODE/Ad_Classification_Pipeline.ipynb
+++ b/CODE/Ad_Classification_Pipeline.ipynb
@@ -81,7 +81,7 @@
         "from google.genai import types\n",
         "\n",
         "# Set up API key\n",
-        "genai.configure(api_key=\"AIzaSyDY5QjBID09gIfTwZDruPpwJVyIF3mC3BM\")\n",
+        "genai.configure(api_key=\"---\")\n",
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
