--- a/CODE/Ad_Scraping_&_Color_Analysis.ipynb
+++ b/CODE/Ad_Scraping_&_Color_Analysis.ipynb
@@ -123,7 +123,7 @@
         "PLAYLIST_ID = PLAYLIST_URL.split(\"list=\")[-1]\n",
         "\n",
         "# Define your YouTube Data API key\n",
-        "API_KEY = \"AIzaSyDb2aliQiuBVO3bOFQd0bYSd9J5772l7_w\"\n",
+        "API_KEY = \"---\"\n",
         "\n",
         "# Define game names and their corresponding folders\n",
         "GAME_CATEGORIES = {\n",
@@ -6922,7 +6922,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Converted colors to English names and saved to: /content/drive/My Drive/Youtube_Game_Ads/Game_Color_Analysis_Named.csv\n"
+            "Converted colors to English names and saved to: /content/drive/My Drive/Youtube_Game_Ads/Game_Color_Analysis_Named.csv\n"
           ]
         }
       ]
