--- a/CODE/Ad_Classification_Pipeline.ipynb
+++ b/CODE/Ad_Classification_Pipeline.ipynb
@@ -105,7 +105,7 @@
         "os.makedirs(PROCESSED_RESPONSES_DIR, exist_ok=True)\n",
         "\n",
         "# Initialize Google Gemini AI client\n",
-        "client = genai.Client(api_key=\"AIzaSyDY5QjBID09gIfTwZDruPpwJVyIF3mC3BM\")\n",
+        "client = genai.Client(api_key=\"---\")\n",
         "\n",
         "# Define classification categories\n",
         "CATEGORIES = [\n",
